--- a/frontend/src/components/CustomModals/customModalStyles.css
+++ b/frontend/src/components/CustomModals/customModalStyles.css
@@ -92,7 +92,8 @@ button {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: #000000e1;
+  background: #000000c2;
+  /* background: #000000e1; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -100,16 +101,19 @@ button {
 }
 
 .modal-cm {
-  width: clamp(50%, 700px, 90%);
-  height: min(50%, 300px);
-
+  /* width: clamp(35%, 450px, 90%); */
+  /* height: min(50%, 250px); */
+  width: clamp(35%, 450px, 90%);
+  height: 200px;
   margin: auto;
   padding: 0 2rem;
-  border-radius: 12px;
+  /* border-radius: 12px; */
+  border: 1px solid #6a584c;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 150;
+  background-color: #e6dac4;
 }
 
 .orange-gradient {
